# flaps

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  lefthook.yml  lightshuttle.yml  rustfmt.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ai-review.yml  ci.yml  docker.yml  fuzz.yml  release.yml  security.yml
crates/flaps-cli/: Cargo.toml
crates/flaps-cli/src/: main.rs
crates/flaps-client/: Cargo.toml
crates/flaps-client/src/: backoff.rs  coerce.rs  context_mapper.rs  lib.rs  metadata_mapper.rs  provider.rs  reason_mapper.rs  shared.rs  snapshot.rs  sse.rs  status.rs  supervisor.rs  sync.rs
crates/flaps-client/tests/: e2e_kill_switch.rs  metadata_ofrep_parity.rs  metadata_resolution.rs  provider_integration.rs  sse_quota_polling_fallback.rs  sse_quota_reconnect.rs
crates/flaps-compiler/: Cargo.toml
crates/flaps-compiler/src/: error.rs  flag_compiler.rs  input.rs  lib.rs  ruleset.rs  segment_compiler.rs
crates/flaps-core/: Cargo.toml
crates/flaps-core/src/: context.rs  environment.rs  errors.rs  evaluation.rs  flag.rs  lib.rs  project.rs  rule.rs  segment.rs
crates/flaps-domain/: Cargo.toml
crates/flaps-domain/src/: audit.rs  environment.rs  error.rs  federation.rs  flag.rs  flag_env_config.rs  key.rs  lib.rs  metadata.rs  project.rs  sdk_key.rs  segment.rs  variant.rs
crates/flaps-eval/: Cargo.toml
crates/flaps-eval/corpus/: README.md
crates/flaps-eval/corpus/errors/: error_flag_not_found.json  error_parse_error.json
crates/flaps-eval/corpus/fractional/: fractional_bucket_by_attribute_override.json  fractional_fifty_fifty_squarey_lands_blue.json  fractional_fifty_fifty_user_lands_red.json  fractional_hundred_zero_always_on.json  fractional_zero_hundred_always_blue.json
crates/flaps-eval/corpus/jsonlogic/: jsonlogic_and_both_true.json  jsonlogic_and_one_false.json  jsonlogic_eq_string_match.json  jsonlogic_eq_string_no_match.json  jsonlogic_if_true_branch.json  jsonlogic_neq_strings.json  jsonlogic_not_false.json  jsonlogic_or_one_true.json  jsonlogic_var_attribute.json
crates/flaps-eval/corpus/resolution/: resolution_number_variant.json  resolution_reason_default.json  resolution_reason_disabled.json  resolution_reason_static.json  resolution_reason_targeting_match.json
crates/flaps-eval/corpus/targeting/: targeting_ends_with_match.json  targeting_evaluators_inlining.json  targeting_sem_ver_gte.json  targeting_sem_ver_lt.json  targeting_starts_with_match.json  targeting_starts_with_no_match.json
crates/flaps-eval/src/: error.rs  eval.rs  fractional.rs  lib.rs  logic.rs  model.rs  parse.rs  semver.rs  serialize.rs  string_comparison.rs  targeting.rs
crates/flaps-eval/tests/: corpus.rs  eval_custom_operators.rs  eval_logic.rs  eval_resolution.rs  evaluators.rs  fractional_properties.rs  parse_model.rs  parse_targeting.rs  roundtrip.rs
crates/flaps-sdk/: Cargo.toml
crates/flaps-sdk/src/: client.rs  config.rs  lib.rs
crates/flaps-server/: Cargo.toml
crates/flaps-server/src/: actor.rs  auth.rs  error.rs  etag.rs  lib.rs  main.rs  rate_limit.rs  recompile.rs  sse_quota.rs  state.rs  sync.rs
crates/flaps-server/src/preauth/: budget.rs  client_address.rs  limiter_key.rs  limits.rs  mod.rs  password_pool.rs  sdk_key_shape.rs
crates/flaps-server/src/routes/: auth.rs  environment.rs  flag.rs  flag_env_config.rs  mod.rs  ofrep.rs  project.rs  sdk.rs  sdk_key.rs  segment.rs
crates/flaps-server/tests/: admin_api.rs  concurrency.rs  ofrep_api.rs  openapi_coverage.rs  preauth.rs  sse_subscription_quota.rs  sync_api.rs
crates/flaps-storage/: Cargo.toml
crates/flaps-storage/migrations/: 20250128_001_initial_schema.sql
crates/flaps-storage/src/: error.rs  lib.rs  traits.rs
crates/flaps-storage/src/cache/: mod.rs  redis.rs
crates/flaps-storage/src/db/: mod.rs
crates/flaps-storage/src/db/postgres/: environments.rs  flags.rs  mod.rs  segments.rs
crates/flaps-storage/src/db/sqlite/: environments.rs  flags.rs  mod.rs  segments.rs
crates/flaps-storage/src/workspace/: client.rs  mod.rs
crates/flaps-storage/tests/: integration_tests.rs
crates/flaps-store/: Cargo.toml
crates/flaps-store/migrations/postgres/: 0001_init.sql  0002_audit_log.sql  0003_accounts.sql  0004_sdk_key_revocation.sql  0005_add_metadata.sql
crates/flaps-store/migrations/sqlite/: 0001_init.sql  0002_audit_log.sql  0003_accounts.sql  0004_sdk_key_revocation.sql  0005_add_metadata.sql
crates/flaps-store/src/: account.rs  audit.rs  clock.rs  error.rs  hash.rs  lib.rs  repository.rs  sdk_key.rs
crates/flaps-store/src/postgres/: mod.rs
crates/flaps-store/src/repository/: account.rs  audit_log.rs  environment.rs  flag.rs  flag_env_config.rs  project.rs  sdk_key.rs  segment.rs  transaction.rs
crates/flaps-store/src/sqlite/: mod.rs
crates/flaps-store/tests/: postgres.rs  sqlite.rs
crates/flaps-store/tests/shared/: mod.rs
crates/flapsd/: Cargo.toml
crates/flapsd/src/: bootstrap.rs  config.rs  lib.rs  main.rs
docs/: GOVERNANCE.md  MSRV_POLICY.md  RELEASE_PROCESS.md  SEMVER_POLICY.md  getting-started.md
docs/adr/: FLAPS-001-compiled-ruleset-pivot.md
docs/design/: architecture.md  interop.md
docs/explanation/: roadmap.md
docs/how-to/: README.md
docs/reference/: README.md
docs/spec/: api-v1.md  openapi.json
docs/tutorials/: README.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/flagset_from_json/: empty.json
fuzz/fuzz_targets/: flagset_from_json.rs
scripts/: check-identity-coherence.sh  release.sh  smoke-image.sh
xtask/: Cargo.toml
xtask/src/: bump.rs  crates_io.rs  main.rs  publish.rs
