[package]
name = "flaps-client"
description = "OpenFeature in-process provider for Rust: ruleset sync over HTTP, server-sent events change notifications and local evaluation via flaps-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
