[package]
name = "flaps-client"
description = "OpenFeature in-process provider for Rust: ruleset sync over HTTP, server-sent events change notifications and local evaluation via flaps-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flaps-eval = { workspace = true }
open-feature = { workspace = true }
reqwest = { workspace = true }
arc-swap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
time = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
flaps-server = { workspace = true }
flaps-store = { workspace = true }
flaps-domain = { workspace = true }

[lints]
workspace = true
