[package]
name = "flaps-compiler"
description = "Compiler from the Flaps domain model to canonical flagd rulesets: one versioned and hashed artifact per environment with inlined segments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flaps-domain = { workspace = true }
flaps-eval = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
sha2 = "0.10"
hex = "0.4"

[lints]
workspace = true
