[package]
name = "flaps-core"
description = "Core domain logic for Nubster Flaps - Feature flags evaluation engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
murmur3 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
