[package]
name = "flaps-eval"
description = "Evaluation engine for flagd compatible rulesets: JsonLogic targeting, deterministic fractional rollouts, semantic version and string operators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
