[package]
name = "flaps-eval"
description = "Evaluation engine for flagd compatible rulesets: JsonLogic targeting, deterministic fractional rollouts, semantic version and string operators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
proptest = { version = "1.11", default-features = false, features = ["std"] }

[lints]
workspace = true
