[package]
name = "flaps-server"
description = "HTTP API server for Nubster Flaps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "flaps-server"
path = "src/main.rs"

[dependencies]
flaps-core = { path = "../flaps-core" }
flaps-storage = { path = "../flaps-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
