[package]
name = "flaps-server"
description = "HTTP server for Flaps: admin REST API, OFREP evaluation endpoints, ruleset sync and server-sent events distribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
