[package]
name = "flaps-server"
description = "HTTP server for Flaps: admin REST API, OFREP evaluation endpoints, ruleset sync and server-sent events distribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flaps-domain = { workspace = true }
flaps-eval = { workspace = true }
flaps-store = { workspace = true }
flaps-compiler = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
