[package]
name = "flaps-store"
description = "Persistence layer for Flaps: SQLx multi backend storage for SQLite and PostgreSQL with migrations and an append only audit log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
